--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "maatwebsite/excel": "^3.1",
+        "pusher/pusher-php-server": "^4.1",
         "webpatser/laravel-uuid": "^3.0"
     },
     "require-dev": {
